spring.datasource.url=jdbc:h2:./jpa-db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.jpa.properties.javax.persistence.sharedCache.mode=NONE
 spring.jpa.properties.javax.persistence.lock.timeout=1000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:~/Projects/springbootjpa/trunk/jpa
-#spring.datasource.url=jdbc:h2:file:C:/Adr/springbootjpa/trunk/jpa
+spring.datasource.url=jdbc:h2:./jpa-db
 spring.datasource.username=sa
 spring.datasource.password=
