--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.properties.javax.persistence.sharedCache.mode=NONE
 spring.jpa.properties.javax.persistence.lock.timeout=1000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:./jpa-db
+# on error remove ./jpa-db.*
+spring.datasource.url=jdbc:h2:./jpa-db;AUTOCOMMIT=OFF
 spring.datasource.username=sa
 spring.datasource.password=
